--- a/stretch-assignment/index.html
+++ b/stretch-assignment/index.html
@@ -12,6 +12,7 @@
       <div class="digit" id="msHundreds">-</div>
       <div class="digit" id="msTens">-</div>
     </div>
+    <button>begin</button>
     <script src="index.js" async></script>
 
   </body>
